[package]
name = "aoxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
backoff = { version = "0.4.0", features = ["tokio"] }
bytes = "1.11.0"
clap = { version = "4.5.40", features = ["derive", "env"] }
deadpool-redis = "0.22.0"
governor = "0.10.0"
redis = "0.32.3"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "http2", "socks"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
