[package]
name = "aoxy"
version = "0.1.0"
edition = "2024"

[features]
default = []
redis = ["dep:deadpool-redis", "dep:redis"]

[dependencies]
axum = "0.8.7"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.22.1"
bytes = "1.11.0"
clap = { version = "4.5.40", features = ["derive", "env"] }
deadpool-redis = { version = "0.22.0", optional = true }
futures = "0.3.31"
governor = "0.10.0"
redis = { version = "0.32.3", optional = true }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "http2", "socks", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
