[package]
name = "aoxy"
version = "0.1.0"
edition = "2024"

[features]
default = []
caching = ["dep:deadpool-redis", "dep:serde_bytes", "dep:rmp-serde"]

[dependencies]
axum = "0.8"

deadpool-redis = { version = "0.22", optional = true }

reqwest = { version = "0.13", features = ["rustls", "http2", "socks", "stream"] }
governor = "0.10"
backoff = { version = "0.4", features = ["tokio"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = { version = "0.11", optional = true }
rmp-serde = { version = "1.3", optional = true }

thiserror = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

bytes = "1.11"
sha2 = "0.10"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
